--- a/demo/03. MultiSampleMethods/01. Sequence Manager.ipynb
+++ b/demo/03. MultiSampleMethods/01. Sequence Manager.ipynb
@@ -25,10 +25,7 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.append('../..')\n",
-    "\n",
-    "sys.path.append('C:\\\\Users\\\\joewa\\\\Work\\\\git\\\\pymzm')\n",
-    "sys.path.append('C:\\\\Users\\\\Vinny\\\\work\\\\pymzm')"
+    "sys.path.append('../..')"
    ]
   },
   {
@@ -59,21 +56,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_dir =  os.path.join(os.path.abspath(os.path.join(os.getcwd(),\"..\")),'01. Data','example_data')\n",
-    "dataset_file = os.path.join(data_dir, 'beers', 'datasets', 'beer_1.p')\n",
+    "data_dir = os.path.join(os.path.abspath(os.path.join(os.path.join(os.getcwd(),\"..\"),\"..\")),'tests','integration','fixtures')\n",
+    "dataset_file = os.path.join(data_dir, 'QCB_22May19_1.p')\n",
     "dataset = load_obj(dataset_file)\n",
-    "ps = load_obj(os.path.join(data_dir, 'peak_sampler_mz_rt_int_19_beers_fragmentation.p'))\n",
-    "mzml_file = os.path.join(data_dir, 'beers', 'fullscan', 'mzML', 'Beer_multibeers_1_fullscan1.mzML')\n",
+    "ps = load_obj(Path(data_dir,'peak_sampler_mz_rt_int_beerqcb_fragmentation.p'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = 'http://researchdata.gla.ac.uk/870/2/example_data.zip'\n",
+    "base_dir = os.path.abspath(os.path.join(os.getcwd(),'..','01. Data', 'example_data'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found C:\\Users\\Vinny\\work\\vimms\\demo\\01. Data\\example_data\n"
+     ]
+    }
+   ],
+   "source": [
+    "if not os.path.isdir(base_dir): # if not exist then download the example data and extract it\n",
+    "    print('Creating %s' % base_dir)    \n",
+    "    out_file = 'example_data.zip'\n",
+    "    download_file(url, out_file)\n",
+    "    extract_zip_file(out_file, delete=True)\n",
+    "else:\n",
+    "    print('Found %s' % base_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mzml_file = os.path.join(base_dir, 'beers', 'fullscan', 'mzML', 'Beer_multibeers_1_fullscan1.mzML')\n",
     "mzml_file_list=[None, mzml_file, None, mzml_file]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,12 +171,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "evaluation_methods = []\n",
-    "mzmine_command = os.path.join(os.path.abspath(os.path.join(os.getcwd(),'..','..','..')),'MZmine-2.40.1', 'MZmine-2.40.1', 'startMZmine_Windows.bat')"
+    "mzmine_command = os.path.abspath(os.path.join(os.getcwd(),'..','..','..','MZmine-2.40.1','MZmine-2.40.1','startMZmine_Windows.bat'))"
    ]
   },
   {
