updated sequence manager example to include updated mass spec

--- a/demo/03. MultiSampleMethods/01. Sequence Manager.ipynb
+++ b/demo/03. MultiSampleMethods/01. Sequence Manager.ipynb
@@ -30,14 +30,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,20 +126,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
+    "DEFAULT_SCAN_TIME_DICT = {1: 0.4, 2: 0.2}\n",
     "mass_spec_params = {'ionisation_mode': POSITIVE,\n",
     "                    'peak_sampler': ps,\n",
-    "                    'add_noise': False,\n",
+    "                    'mz_noise': None,\n",
+    "                    'intensity_noise': None,\n",
     "                    'isolation_transition_window': 'rectangular',\n",
-    "                    'isolation_transition_window_params': None}"
+    "                    'isolation_transition_window_params': None,\n",
+    "                    'scan_duration_dict': DEFAULT_SCAN_TIME_DICT}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +242,7 @@
        "      <td>TopNController</td>\n",
        "      <td>{'ionisation_mode': 'Positive', 'N': 10, 'mz_t...</td>\n",
        "      <td>{'ionisation_mode': 'Positive', 'peak_sampler'...</td>\n",
-       "      <td>C:\\Users\\Vinny\\work\\vimms\\demo\\01. Data\\exampl...</td>\n",
+       "      <td>C:\\Users\\Vinny\\work\\vimms\\tests\\integration\\fi...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -255,7 +258,7 @@
        "      <td>TopNController</td>\n",
        "      <td>{'ionisation_mode': 'Positive', 'N': 10, 'mz_t...</td>\n",
        "      <td>{'ionisation_mode': 'Positive', 'peak_sampler'...</td>\n",
-       "      <td>C:\\Users\\Vinny\\work\\vimms\\demo\\01. Data\\exampl...</td>\n",
+       "      <td>C:\\Users\\Vinny\\work\\vimms\\tests\\integration\\fi...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -282,12 +285,12 @@
        "\n",
        "                                             Dataset  \n",
        "0                                               None  \n",
-       "1  C:\\Users\\Vinny\\work\\vimms\\demo\\01. Data\\exampl...  \n",
+       "1  C:\\Users\\Vinny\\work\\vimms\\tests\\integration\\fi...  \n",
        "2                                               None  \n",
-       "3  C:\\Users\\Vinny\\work\\vimms\\demo\\01. Data\\exampl...  "
+       "3  C:\\Users\\Vinny\\work\\vimms\\tests\\integration\\fi...  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +397,7 @@
        "3  {'ionisation_mode': 'Positive', 'peak_sampler'...    None  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -420,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -438,26 +441,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2020-07-17 17:55:45.963 | INFO     | vimms.SequenceManager:run:242 - Running in serial mode\n",
-      "2020-07-17 17:55:45.964 | INFO     | vimms.SequenceManager:run_controller:198 - Begun experiment: sample1\n",
-      "2020-07-17 17:55:46.166 | INFO     | vimms.SequenceManager:run_experiment:179 - Experiment already completed. Skipping...\n",
-      "2020-07-17 17:55:46.169 | INFO     | vimms.SequenceManager:run_controller:202 - Completed experiment: sample1\n",
-      "2020-07-17 17:55:46.172 | INFO     | vimms.SequenceManager:run_evaluation:212 - Started Evaluation: sample1\n",
-      "2020-07-17 17:55:46.175 | INFO     | vimms.SequenceManager:run_evaluation:214 - Completed Evaluation: sample1\n",
-      "2020-07-17 17:55:46.177 | INFO     | vimms.SequenceManager:run_serial:254 - Finished 0\n",
-      "2020-07-17 17:55:46.180 | INFO     | vimms.SequenceManager:run_controller:198 - Begun experiment: sample2\n",
-      "(1440.030s) ms_level=1 N=10 DEW=30: 100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▉| 1439.7592319999967/1440 [02:31<00:00,  9.48it/s]\n",
-      "2020-07-17 17:58:23.186 | INFO     | vimms.SequenceManager:run_controller:202 - Completed experiment: sample2\n",
-      "2020-07-17 17:58:23.187 | INFO     | vimms.SequenceManager:run_evaluation:212 - Started Evaluation: sample2\n",
-      "2020-07-17 17:58:23.188 | INFO     | vimms.SequenceManager:run_evaluation:214 - Completed Evaluation: sample2\n",
-      "2020-07-17 17:58:23.189 | INFO     | vimms.SequenceManager:run_serial:254 - Finished 1\n"
+      "2020-08-21 15:46:11.457 | INFO     | vimms.SequenceManager:run:237 - Running in serial mode\n",
+      "2020-08-21 15:46:11.458 | INFO     | vimms.SequenceManager:run_controller:191 - Begun experiment: sample1\n",
+      "2020-08-21 15:46:11.659 | INFO     | vimms.SequenceManager:run_experiment:172 - Experiment already completed. Skipping...\n",
+      "2020-08-21 15:46:11.660 | INFO     | vimms.SequenceManager:run_controller:195 - Completed experiment: sample1\n",
+      "2020-08-21 15:46:11.660 | INFO     | vimms.SequenceManager:run_evaluation:205 - Started Evaluation: sample1\n",
+      "2020-08-21 15:46:11.661 | INFO     | vimms.SequenceManager:run_evaluation:207 - Completed Evaluation: sample1\n",
+      "2020-08-21 15:46:11.662 | INFO     | vimms.SequenceManager:run_serial:249 - Finished 0\n",
+      "2020-08-21 15:46:11.663 | INFO     | vimms.SequenceManager:run_controller:191 - Begun experiment: sample2\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2020-08-21 15:46:11.866 | INFO     | vimms.SequenceManager:run_experiment:158 - {'Sample ID': {1: 'sample2'}, 'Controller Method': {1: 'TopNController'}, 'Controller Params': {1: {'ionisation_mode': 'Positive', 'N': 10, 'isolation_width': 1, 'mz_tol': 10, 'rt_tol': 30, 'min_ms1_intensity': 175000.0, 'ms1_shift': 0, 'ms1_agc_target': 200000, 'ms1_max_it': 250, 'ms1_collision_energy': 0, 'ms1_orbitrap_resolution': 120000, 'ms1_activation_type': 'HCD', 'ms1_mass_analyser': 'Orbitrap', 'ms1_isolation_mode': 'Quadupole', 'ms2_agc_target': 30000, 'ms2_max_it': 100, 'ms2_collision_energy': 25, 'ms2_orbitrap_resolution': 7500, 'ms2_activation_type': 'HCD', 'ms2_mass_analyser': 'Orbitrap', 'ms2_isolation_mode': 'Quadupole'}}, 'MassSpec Params': {1: {'ionisation_mode': 'Positive', 'peak_sampler': <vimms.DataGenerator.PeakSampler object at 0x00000206C55E9198>, 'mz_noise': None, 'intensity_noise': None, 'isolation_transition_window': 'rectangular', 'isolation_transition_window_params': None, 'scan_duration_dict': {1: 0.4, 2: 0.2}}}, 'Dataset': {1: 'C:\\\\Users\\\\Vinny\\\\work\\\\vimms\\\\tests\\\\integration\\\\fixtures\\\\QCB_22May19_1.p'}}\n",
+      "(1440.000s) ms_level=1 N=10 DEW=30: 100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▉| 1439.6000000000813/1440 [00:36<00:00, 39.75it/s]\n",
+      "2020-08-21 15:46:58.102 | INFO     | vimms.SequenceManager:run_controller:195 - Completed experiment: sample2\n",
+      "2020-08-21 15:46:58.104 | INFO     | vimms.SequenceManager:run_evaluation:205 - Started Evaluation: sample2\n",
+      "2020-08-21 15:46:58.104 | INFO     | vimms.SequenceManager:run_evaluation:207 - Completed Evaluation: sample2\n",
+      "2020-08-21 15:46:58.105 | INFO     | vimms.SequenceManager:run_serial:249 - Finished 1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
      ]
     }
    ],
@@ -468,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -498,14 +522,21 @@
        "      <th>mz_tol</th>\n",
        "      <th>rt_tol</th>\n",
        "      <th>min_ms1_intensity</th>\n",
+       "      <th>ms1_shift</th>\n",
        "      <th>ms1_agc_target</th>\n",
        "      <th>ms1_max_it</th>\n",
        "      <th>ms1_collision_energy</th>\n",
-       "      <th>ms1_orbitrap_resolution</th>\n",
+       "      <th>...</th>\n",
+       "      <th>ms1_activation_type</th>\n",
+       "      <th>ms1_mass_analyser</th>\n",
+       "      <th>ms1_isolation_mode</th>\n",
        "      <th>ms2_agc_target</th>\n",
        "      <th>ms2_max_it</th>\n",
        "      <th>ms2_collision_energy</th>\n",
        "      <th>ms2_orbitrap_resolution</th>\n",
+       "      <th>ms2_activation_type</th>\n",
+       "      <th>ms2_mass_analyser</th>\n",
+       "      <th>ms2_isolation_mode</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -517,14 +548,21 @@
        "      <td>10</td>\n",
        "      <td>30</td>\n",
        "      <td>175000.0</td>\n",
-       "      <td>200000.0</td>\n",
-       "      <td>250.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>120000.0</td>\n",
-       "      <td>30000.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>25.0</td>\n",
-       "      <td>7500.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>200000</td>\n",
+       "      <td>250</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>HCD</td>\n",
+       "      <td>Orbitrap</td>\n",
+       "      <td>Quadupole</td>\n",
+       "      <td>30000</td>\n",
+       "      <td>100</td>\n",
+       "      <td>25</td>\n",
+       "      <td>7500</td>\n",
+       "      <td>HCD</td>\n",
+       "      <td>Orbitrap</td>\n",
+       "      <td>Quadupole</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -534,17 +572,25 @@
        "      <td>10</td>\n",
        "      <td>30</td>\n",
        "      <td>175000.0</td>\n",
-       "      <td>200000.0</td>\n",
-       "      <td>250.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>120000.0</td>\n",
-       "      <td>30000.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>25.0</td>\n",
-       "      <td>7500.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>200000</td>\n",
+       "      <td>250</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>HCD</td>\n",
+       "      <td>Orbitrap</td>\n",
+       "      <td>Quadupole</td>\n",
+       "      <td>30000</td>\n",
+       "      <td>100</td>\n",
+       "      <td>25</td>\n",
+       "      <td>7500</td>\n",
+       "      <td>HCD</td>\n",
+       "      <td>Orbitrap</td>\n",
+       "      <td>Quadupole</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>2 rows × 21 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -552,16 +598,26 @@
        "0   sample1    TopNController  10      10      30           175000.0   \n",
        "1   sample2    TopNController  10      10      30           175000.0   \n",
        "\n",
-       "   ms1_agc_target  ms1_max_it  ms1_collision_energy  ms1_orbitrap_resolution  \\\n",
-       "0        200000.0       250.0                   0.0                 120000.0   \n",
-       "1        200000.0       250.0                   0.0                 120000.0   \n",
+       "   ms1_shift  ms1_agc_target  ms1_max_it  ms1_collision_energy  ...  \\\n",
+       "0          0          200000         250                     0  ...   \n",
+       "1          0          200000         250                     0  ...   \n",
        "\n",
-       "   ms2_agc_target  ms2_max_it  ms2_collision_energy  ms2_orbitrap_resolution  \n",
-       "0         30000.0       100.0                  25.0                   7500.0  \n",
-       "1         30000.0       100.0                  25.0                   7500.0  "
+       "   ms1_activation_type ms1_mass_analyser ms1_isolation_mode ms2_agc_target  \\\n",
+       "0                  HCD          Orbitrap          Quadupole          30000   \n",
+       "1                  HCD          Orbitrap          Quadupole          30000   \n",
+       "\n",
+       "   ms2_max_it  ms2_collision_energy  ms2_orbitrap_resolution  \\\n",
+       "0         100                    25                     7500   \n",
+       "1         100                    25                     7500   \n",
+       "\n",
+       "   ms2_activation_type ms2_mass_analyser ms2_isolation_mode  \n",
+       "0                  HCD          Orbitrap          Quadupole  \n",
+       "1                  HCD          Orbitrap          Quadupole  \n",
+       "\n",
+       "[2 rows x 21 columns]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -579,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -588,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -597,35 +653,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2020-07-17 18:02:47.070 | INFO     | vimms.Roi:__init__:406 - Found 11480 ROIs above thresholds\n",
-      "2020-07-17 18:02:47.071 | INFO     | vimms.Common:save_obj:61 - Saving <class 'list'> to C:\\Users\\Vinny\\work\\vimms\\demo\\01. Data\\example_data\\beers\\fullscan\\mzML\\Beer_multibeers_1_fullscan1.p\n",
-      "2020-07-17 18:02:56.010 | INFO     | vimms.Common:save_obj:61 - Saving <class 'list'> to C:\\Users\\Vinny\\work\\vimms\\demo\\03. MultiSampleMethods\\results\\sequence_manager_example_1\\Beer_multibeers_1_fullscan1.p\n",
-      "2020-07-17 18:05:17.721 | INFO     | vimms.Roi:__init__:406 - Found 11480 ROIs above thresholds\n",
-      "2020-07-17 18:05:17.722 | INFO     | vimms.Common:save_obj:61 - Saving <class 'list'> to C:\\Users\\Vinny\\work\\vimms\\demo\\01. Data\\example_data\\beers\\fullscan\\mzML\\Beer_multibeers_1_fullscan1.p\n",
-      "2020-07-17 18:05:26.411 | INFO     | vimms.Common:save_obj:61 - Saving <class 'list'> to C:\\Users\\Vinny\\work\\vimms\\demo\\03. MultiSampleMethods\\results\\sequence_manager_example_1\\Beer_multibeers_1_fullscan1.p\n",
-      "2020-07-17 18:05:35.574 | INFO     | vimms.SequenceManager:run:242 - Running in serial mode\n",
-      "2020-07-17 18:05:35.575 | INFO     | vimms.SequenceManager:run_controller:198 - Begun experiment: sample1\n",
-      "2020-07-17 18:05:35.775 | INFO     | vimms.SequenceManager:run_experiment:179 - Experiment already completed. Skipping...\n",
-      "2020-07-17 18:05:35.778 | INFO     | vimms.SequenceManager:run_controller:202 - Completed experiment: sample1\n",
-      "2020-07-17 18:05:35.780 | INFO     | vimms.SequenceManager:run_evaluation:212 - Started Evaluation: sample1\n",
-      "2020-07-17 18:05:35.782 | INFO     | vimms.SequenceManager:run_evaluation:214 - Completed Evaluation: sample1\n",
-      "2020-07-17 18:05:35.784 | INFO     | vimms.SequenceManager:run_serial:254 - Finished 0\n",
-      "2020-07-17 18:05:35.786 | INFO     | vimms.SequenceManager:run_controller:198 - Begun experiment: sample2\n",
-      "2020-07-17 18:05:35.988 | INFO     | vimms.SequenceManager:run_experiment:179 - Experiment already completed. Skipping...\n",
-      "2020-07-17 18:05:35.989 | INFO     | vimms.SequenceManager:run_controller:202 - Completed experiment: sample2\n",
-      "2020-07-17 18:05:35.989 | INFO     | vimms.SequenceManager:run_evaluation:212 - Started Evaluation: sample2\n",
-      "2020-07-17 18:05:35.990 | INFO     | vimms.SequenceManager:run_evaluation:214 - Completed Evaluation: sample2\n",
-      "2020-07-17 18:05:35.990 | INFO     | vimms.SequenceManager:run_serial:254 - Finished 1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "vsm = VimmsSequenceManager(controller_schedule2, evaluation_methods, output_dir, ms1_picked_peaks_file=None, progress_bar=True, mzmine_command=mzmine_command)\n",
     "experiment = BasicExperiment(vsm, parallel=parallel, mzml_file_list=mzml_file_list, MZML2CHEMS_DICT=MZML2CHEMS_DICT, ps=ps)"
